ADD cache buster for loading bookmarklet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Jupyter Sidenote</h1>
 	<p>
 		<div>
-			<a href="javascript:(function(){function insertScript(source){var s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('src',source);s.setAttribute('class','jupyter-sidenote-script');if(typeof s!='undefined'){document.getElementsByTagName('head')[0].appendChild(s)}}var src='https://jangxyz.github.io/jupyter-sidenote/dist/main.js';insertScript(src);})()">sidenote!</a> bookmarklet
+			<a href="javascript:(function(){function insertScript(source){var s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('src',source);s.setAttribute('class','jupyter-sidenote-script');if(typeof s!='undefined'){document.getElementsByTagName('head')[0].appendChild(s)}}var src='https://jangxyz.github.io/jupyter-sidenote/dist/main.js';insertScript(src+'?'+Date.now());})()">sidenote!</a> bookmarklet
 		</div>
 
 		drag the link to your bookmark bar
